# xz-jni

./: .gitignore  CMakeLists.txt  README.md  java_createHeader.sh
cmake/: android.toolchain.cmake  toolchain-arm-none-linux-gnueabi.cmake
doc/: indexed-deflate-format.txt
java/: build.xml
java/src/de/unistuttgart/informatik/OfflineToureNPlaner/xz/: XZInputStream.java
lib/: CMakeLists.txt  de_unistuttgart_informatik_OfflineToureNPlaner_xz_XZInputStream.c  de_unistuttgart_informatik_OfflineToureNPlaner_xz_XZInputStream.cpp  de_unistuttgart_informatik_OfflineToureNPlaner_xz_XZInputStream.h  file.cpp  file.h  idx-defl-file.cpp  idx-defl-file.h  idx-deflate.cpp  idx-inflate.cpp  libxz-jni.map  xz-file.cpp  xz-file.h  xz-inflate.cpp
tools/: idx-deflate.cpp  idx-inflate.cpp  xz-inflate.cpp
